sharetopia-elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: sharetopia-elasticsearch
  name: sharetopia-elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sharetopia-elasticsearch
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sharetopia: "true"
        io.kompose.service: sharetopia-elasticsearch
    spec:
      containers:
        - env:
            - name: discovery.type
              value: single-node
            - name: xpack.security.enabled
              value: "false"
          image: docker.elastic.co/elasticsearch/elasticsearch:7.16.2
          name: sharetopia-elasticsearch
          ports:
            - containerPort: 9200
            - containerPort: 9300
          resources: {}
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
      restartPolicy: Always
status: {}
