sharetopia-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: sharetopia-mongo
  name: sharetopia-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sharetopia-mongo
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sharetopia: "true"
        io.kompose.service: sharetopia-mongo
    spec:
      containers:
        - image: mongo:latest
          name: sharetopia-mongo
          ports:
            - containerPort: 27017
          resources: {}
      restartPolicy: Always
status: {}
