sharetopia-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: sharetopia-mongo
  name: sharetopia-mongo
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
    - name: 27017-tcp
      port: 27017
      targetPort: 27017
  selector:
    io.kompose.service: sharetopia-mongo
status:
  loadBalancer: {}
